# segmentation-tools

./: .gitignore  .travis.yml  CONTRIBUTING.rst  LICENSE  Makefile  README.md  README.rst  pyproject.toml  tox.ini
.github/: ISSUE_TEMPLATE.md
docs/: Makefile  conf.py  index.rst  installation.rst  make.bat  usage.rst
src/MIRAGE/: .pypi_token  README.md  pyproject.toml  requirements.txt
src/MIRAGE/mirage/: __init__.py
src/MIRAGE/tests/: quickstart.ipynb  result.0.nii  test_model.py
src/notebooks/: test_mirage.ipynb
src/segmentation_tools/: __init__.py  cli.py  config_example.yaml  for_matthew_williams.ipynb  logger.py  main.py  pipeline.py  pipeline.sh  run_local.sh  submit_alignment_job.sh  view_results.py
src/segmentation_tools/notebooks/: cam_16.ipynb
src/segmentation_tools/pipelines/: __init__.py  alignment_pipeline.py  alignment_utils.py  segmentation_pipeline.py
src/segmentation_tools/processes/: 000_setup_directories.py  001_convert_to_tiff.py  002_find_optimal_sift_levels.py  002_preprocess_images.py  003_find_alignment_transform.py  003_preprocess_images.py  004_find_sift_alignment_transform.py  (+12 more)
tests/: __init__.py  conftest.py  test_segmentation_tools.py  test_utils.py
tests/integration/: test_masks_pipeline.py  test_setup_and_preprocess.py  test_sift_warp_pipeline.py  test_warp_and_pyramid.py
tests/unit/: test_create_rgb_overlay.py  test_join_masks.py  test_masks_to_gpd.py  test_multiotsu.py  test_normalize.py  test_recommend_mirage_params.py  test_setup_directories.py  test_sift.py  test_warp_image_with_sift.py  test_warp_pyvips.py
(+82 files in other folders)
