[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "segmentation-tools"
version = "0.1.0"
description = "CLI tools for preprocessing and segmenting microscopy images using Cellpose or Stardist."
readme = "README.rst"
license = {text = "MIT"}
requires-python = ">=3.8"

dependencies = [
  "numpy",
  "scikit-image",
  "tifffile",
  "h5py",
  "matplotlib",
  "cellpose",
  "stardist",
  "scanpy",
  "shapely"
]

[project.optional-dependencies]
dev = [
  "pytest",
  "coverage",
  "mypy",
  "ruff"
]

[project.scripts]
segmentation-tools = "segmentation_tools.main:main"

[project.urls]
homepage = "https://github.com/rghosh670/segmentation_tools"
bugs = "https://github.com/rghosh670/segmentation_tools/issues"
changelog = "https://github.com/rghosh670/segmentation_tools/blob/master/changelog.md"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"*" = ["*.*"]

# Mypy settings
[tool.mypy]
files = "."
strict = true
warn_unreachable = true
warn_no_return = true

[[tool.mypy.overrides]]
module = "tests.*"
allow_untyped_defs = true
disable_error_code = "attr-defined"
